--- a/parenting.html
+++ b/parenting.html
@@ -16,6 +16,17 @@
     .task-table th, .task-table td { border:1px solid #e2e5e9; padding:0.5rem; text-align:left; }
     .task-table th { background:#C7BBB4; color:#2B2C29; }
     .color-swatch { display:inline-block; width:18px; height:18px; border-radius:50%; border:1px solid #999; vertical-align:middle; margin-right:6px; }
+
+    .add-toggle { background:#2B2C29; color:#C7BBB4; font-size:0.8rem; padding:0.5rem; transition:all 0.2s ease; }
+    .add-toggle:hover { background:#C7BBB4; color:#2B2C29; box-shadow:0 0 12px 2px #2B2C29; }
+    .form-grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(200px,1fr)); gap:1rem; align-items:center; }
+    .form-grid label { display:flex; flex-direction:column; font-size:0.9rem; font-weight:bold; }
+    .form-grid input, .form-grid select { width:100%; font-size:1rem; padding:0.4rem; margin-top:0.3rem; box-sizing:border-box; font-weight:normal; }
+    .subtoggle { font-size:0.9rem; margin-top:0.5rem; }
+    .section-header { position:relative; }
+    .section-header .pin-star { position:absolute; top:50%; right:8px; transform:translateY(-50%); cursor:pointer; z-index:10; }
+    .section-header .pin-star svg { width:16px; height:16px; }
+    .section-header .pin-star.pinned svg { fill:#F7F6F3; stroke:#2B2C29; stroke-width:1; }
   </style>
 </head>
 <body>
@@ -24,6 +35,28 @@
   </header>
   <div id="nav-placeholder"></div>
   <script src="nav-loader.js"></script>
+
+  <section>
+    <div class="toggle section-header" onclick="toggle('developmentSection')">
+      Development Activities
+      <span class="pin-star" onclick="event.stopPropagation(); togglePin('developmentSection')" title="Pin section open">
+        <svg viewBox="0 0 24 24" fill="#2B2C29" stroke="#F7F6F3" stroke-width="1">
+          <polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"></polygon>
+        </svg>
+      </span>
+    </div>
+    <div id="developmentSection" class="hidden">
+      <div id="activityList"></div>
+      <div class="toggle add-toggle" onclick="toggle('addActivityForm')">Add Development Activity</div>
+      <div id="addActivityForm" class="hidden subtoggle form-grid">
+        <label>Name<input type="text" id="activityName"></label>
+        <label>Skill<select id="activitySkill"></select></label>
+        <div style="grid-column:1/-1;text-align:center;">
+          <button class="submit-btn" onclick="addActivity()">Submit</button>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <section>
     <div class="toggle section-header" onclick="toggle('settings')">Settings</div>
@@ -96,6 +129,25 @@
       });
     }
 
+    function formatUK(date){ const d=new Date(date); if(isNaN(d)) return date||''; return d.toLocaleDateString('en-GB',{day:'2-digit',month:'long',year:'2-digit'}); }
+    function countLastMonth(dates){
+      const cutoff=new Date();
+      cutoff.setMonth(cutoff.getMonth()-1);
+      return dates.filter(d=>new Date(d)>=cutoff).length;
+    }
+
+    function updateSkillOptions(){
+      const sel=document.getElementById('activitySkill');
+      if(!sel) return;
+      sel.innerHTML='';
+      skills.filter(s=>!s.closed).forEach(s=>{
+        const opt=document.createElement('option');
+        opt.value=s.id;
+        opt.textContent=s.name;
+        sel.appendChild(opt);
+      });
+    }
+
     function hasOpenActivities(skillId){
       if(!Array.isArray(activities) || activities.length===0) return false;
       return activities.some(a => a.skillId===skillId && !a.completed);
@@ -108,6 +160,7 @@
       skills.push({ id: nextSkillId++, name, color, closed:false });
       document.getElementById('skillName').value='';
       renderSkills();
+      updateSkillOptions();
       saveParenting();
     }
 
@@ -165,9 +218,132 @@
       });
       table.appendChild(tbody);
       container.appendChild(table);
+      updateSkillOptions();
     }
 
-    async function init(){ await loadParenting(); renderSkills(); }
+    function addActivity(){
+      const name=(document.getElementById('activityName').value||'').trim();
+      const skillId=Number(document.getElementById('activitySkill').value);
+      if(!name||!skillId) return;
+      const act={id:String(nextActivityId++).padStart(8,'0'),name,skillId,completedDates:[],status:'open',dueDate:''};
+      activities.push(act);
+      document.getElementById('activityName').value='';
+      renderActivities();
+      saveParenting();
+    }
+
+    function renderActivities(){
+      const container=document.getElementById('activityList');
+      container.innerHTML='';
+      const open=activities.filter(a=>a.status==='open');
+      if(open.length===0){container.textContent='No development activities';return;}
+      const table=document.createElement('table');table.className='task-table';
+      const head=document.createElement('tr');
+      head.innerHTML='<th>Activity</th><th>Last Done</th><th>How Frequently</th><th style="min-width:200px;">Action</th>';
+      table.appendChild(head);
+      open.forEach(a=>{
+        const tr=document.createElement('tr');
+        const skill=skills.find(s=>s.id===a.skillId);
+        const color=skill?skill.color:'#000';
+        const last=a.completedDates.length?formatUK(a.completedDates[a.completedDates.length-1]):'';
+        const freq=countLastMonth(a.completedDates);
+
+        const taskCell=document.createElement('td');
+        const nameDiv=document.createElement('div');nameDiv.textContent=a.name;nameDiv.style.fontWeight='500';
+        const skillDiv=document.createElement('div');skillDiv.textContent=skill?skill.name:'';skillDiv.style.color=color;skillDiv.style.fontSize='0.8rem';skillDiv.style.marginTop='0.2rem';
+        taskCell.appendChild(nameDiv);taskCell.appendChild(skillDiv);
+        tr.appendChild(taskCell);
+
+        const lastTd=document.createElement('td');lastTd.textContent=last;tr.appendChild(lastTd);
+        const freqTd=document.createElement('td');freqTd.textContent=freq;tr.appendChild(freqTd);
+
+        const td=document.createElement('td');
+        td.style.display='grid';td.style.gridTemplateColumns='repeat(3,1fr)';td.style.gap='0.2rem';td.style.padding='0.5rem';td.style.alignItems='center';td.style.justifyItems='center';td.style.height='auto';td.style.minHeight='60px';td.style.minWidth='200px';
+
+        const addBtn=document.createElement('button');
+        addBtn.innerHTML='<svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="10" cy="10" r="8" fill="#B5A89A"/><path d="M10 6v8M6 10h8" stroke="#fff" stroke-width="2" stroke-linecap="round"/></svg>';
+        addBtn.title='Add to Today';addBtn.style.background='none';addBtn.style.border='none';addBtn.style.cursor='pointer';addBtn.style.padding='2px';
+        addBtn.onclick=()=>addActivityToToday(a.id,a.name);
+
+        const logBtn=document.createElement('button');
+        logBtn.innerHTML='<svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="10" cy="10" r="8" fill="#81B29A"/><path d="m6 10 2 2 6-6" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>';
+        logBtn.title='Log Completion';logBtn.style.background='none';logBtn.style.border='none';logBtn.style.cursor='pointer';logBtn.style.padding='2px';
+        logBtn.onclick=()=>logActivity(a.id);
+
+        const editBtn=document.createElement('button');
+        editBtn.innerHTML='<svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="3" y="4" width="14" height="12" rx="2" fill="#B5A89A"/><path d="m6 2v4m8-4v4" stroke="#2B2C29" stroke-width="2" stroke-linecap="round"/><path d="M3 8h14" stroke="#2B2C29" stroke-width="2"/><circle cx="8" cy="12" r="1" fill="#2B2C29"/><circle cx="12" cy="12" r="1" fill="#2B2C29"/></svg>';
+        editBtn.title='Edit Due Date';editBtn.style.background='none';editBtn.style.border='none';editBtn.style.cursor='pointer';editBtn.style.padding='2px';
+        editBtn.onclick=()=>editActivityDue(a.id);
+
+        const archiveBtn=document.createElement('button');
+        archiveBtn.innerHTML='<svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="3" y="4" width="14" height="3" rx="2" fill="#B5A89A"/><rect x="5" y="8" width="10" height="8" rx="2" fill="#C7BBB4"/><rect x="8" y="11" width="4" height="2" rx="1" fill="#2B2C29"/></svg>';
+        archiveBtn.title='Archive';archiveBtn.style.background='none';archiveBtn.style.border='none';archiveBtn.style.cursor='pointer';archiveBtn.style.padding='2px';
+        archiveBtn.onclick=()=>confirmArchiveActivity(a.id,a.name);
+
+        const delBtn=document.createElement('button');
+        delBtn.innerHTML='<svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="6" y="8" width="8" height="8" rx="2" fill="#E07A5F"/><rect x="9" y="11" width="2" height="3" rx="1" fill="#fff"/><rect x="8" y="4" width="4" height="2" rx="1" fill="#2B2C29"/></svg>';
+        delBtn.title='Delete';delBtn.style.background='none';delBtn.style.border='none';delBtn.style.cursor='pointer';delBtn.style.padding='2px';
+        delBtn.onclick=()=>confirmDeleteActivity(a.id,a.name);
+
+        td.appendChild(addBtn);
+        td.appendChild(logBtn);
+        td.appendChild(editBtn);
+        td.appendChild(archiveBtn);
+        td.appendChild(delBtn);
+        tr.appendChild(td);
+        table.appendChild(tr);
+      });
+      container.appendChild(table);
+    }
+
+    function logActivity(id){
+      const act=activities.find(a=>a.id===id);
+      if(!act) return;
+      act.completedDates.push(new Date().toISOString().slice(0,10));
+      saveParenting();
+      renderActivities();
+    }
+
+    function editActivityDue(id){
+      const act=activities.find(a=>a.id===id);
+      if(!act) return;
+      const newDue=prompt('Enter new due date (YYYY-MM-DD):', act.dueDate||'');
+      if(newDue!==null){act.dueDate=newDue; saveParenting(); renderActivities();}
+    }
+
+    function confirmArchiveActivity(id,name){ if(!confirm(`Are you sure you want to archive the activity "${name}"?`)) return; archiveActivity(id); }
+    function archiveActivity(id){ const act=activities.find(a=>a.id===id); if(!act) return; act.status='closed'; act.closedDate=new Date().toISOString().slice(0,10); saveParenting(); renderActivities(); }
+    function confirmDeleteActivity(id,name){ if(!confirm(`Are you sure you want to delete the activity "${name}"? This action cannot be undone.`)) return; deleteActivity(id); }
+    function deleteActivity(id){ activities=activities.filter(a=>a.id!==id); saveParenting(); renderActivities(); }
+
+    async function addActivityToToday(id,name){
+      await fetch('/api/add-to-today',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({taskType:'dev',taskId:id,taskName:name})});
+    }
+
+    function togglePin(sectionId){
+      const star=document.querySelector(`[onclick*="togglePin('${sectionId}')"]`);
+      const pinned=!star.classList.contains('pinned');
+      star.classList.toggle('pinned');
+      let pins=JSON.parse(localStorage.getItem('parentingPins')||'[]');
+      if(pinned){
+        pins.push(sectionId);
+        const sec=document.getElementById(sectionId); if(sec) sec.classList.remove('hidden');
+      } else {
+        pins=pins.filter(id=>id!==sectionId);
+      }
+      localStorage.setItem('parentingPins',JSON.stringify(pins));
+    }
+
+    function restorePins(){
+      const pins=JSON.parse(localStorage.getItem('parentingPins')||'[]');
+      pins.forEach(id=>{
+        const star=document.querySelector(`[onclick*="togglePin('${id}')"]`);
+        if(star) star.classList.add('pinned');
+        const sec=document.getElementById(id); if(sec) sec.classList.remove('hidden');
+      });
+    }
+
+    async function init(){ await loadParenting(); renderSkills(); renderActivities(); restorePins(); }
     document.addEventListener('DOMContentLoaded', init);
   </script>
 </body>
